# latte

./: .gitignore  CMakeLists.txt  README.md  bootstrap.sh  build.sh  vcpkg.json
.kiro/specs/podman-sandbox-milestone/: requirements.md  tasks.md
.kiro/steering/: architecture.md  project.md
cli/: CMakeLists.txt  latte_cli.cpp  latte_cli.hpp
cli/commands/: grind.cpp  grind.hpp
cmake/: Dependencies.cmake  ProjectOptionsInterface.cmake
compiler/: CMakeLists.txt  grind.cpp  grind.hpp  importer_client.cpp  importer_client.hpp
core/: CMakeLists.txt  main.cpp
grind/: CMakeLists.txt  grind.cpp  grind.hpp
roaster/: Dockerfile  main.py  pyproject.toml
roaster/latte_roaster/: __main__.py  config.py
roaster/latte_roaster/core/: __init__.py  pipeline.py
roaster/latte_roaster/dto/: context.py  protocol.py
roaster/latte_roaster/util/: emitter.py
sandbox/: CMakeLists.txt  sandbox.hpp  sandbox_config.hpp  sandbox_factory.cpp  sandbox_factory.hpp  sandbox_process.hpp
sandbox/podman/: podman_process.cpp  podman_process.hpp  podman_sandbox.cpp  podman_sandbox.hpp
src/: CMakeLists.txt
